fix: only add spacing for global padding and group has background

--- a/src/scss/blocks/core/_global.scss
+++ b/src/scss/blocks/core/_global.scss
@@ -1,23 +1,26 @@
 //----------------------------------------
 // Global style for all blocks
 //----------------------------------------
-.entry-content > * {
-	padding-top: calc(var( --wp--style--block-gap ) * 3 );
-	padding-bottom: calc(var( --wp--style--block-gap ) * 3 );
-	> .wp-block:not(.wp-block-heading),
-	> .wp-block-group,
-	> .wp-block-image,
-	> .wp-block-embed,
-	> .wp-block-cover,
-	> .wp-block-media-text {
-		margin-bottom: calc(var( --wp--style--block-gap ) * 1.5 );
+.entry-content > {
+	.has-background,
+	.has-global-padding {
+		padding-top: calc(var( --wp--style--block-gap ) * 3 );
+		padding-bottom: calc(var( --wp--style--block-gap ) * 3 );
+		> .wp-block:not(.wp-block-heading),
+		> .wp-block-group,
+		> .wp-block-image,
+		> .wp-block-embed,
+		> .wp-block-cover,
+		> .wp-block-media-text {
+			margin-bottom: calc(var( --wp--style--block-gap ) * 1.5 );
 
-		&:first-child {
-			@apply mt-0;
-		}
+			&:first-child {
+				@apply mt-0;
+			}
 
-		&:last-child {
-			@apply mb-0;
+			&:last-child {
+				@apply mb-0;
+			}
 		}
 	}
 }
